# accenture_challenge

./: .gitignore  pyproject.toml
accenture_challenge/: model.ipynb
accenture_challenge/runs/Mar06_12-13-09_MacBook-Air-di-Pietro.local/: events.out.tfevents.1741259589.MacBook-Air-di-Pietro.local.32113.0
accenture_challenge/runs/Mar06_12-20-52_MacBook-Air-di-Pietro.local/: events.out.tfevents.1741260052.MacBook-Air-di-Pietro.local.32113.1
accenture_challenge/runs/Mar06_12-24-02_MacBook-Air-di-Pietro.local/: events.out.tfevents.1741260242.MacBook-Air-di-Pietro.local.32113.2
