[tool.poetry]
name = "accenture-challenge"
version = "0.1.0"
description = ""
authors = ["pit0500 <pietro.macri2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torch = "^2.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
